Added Image Slide Show

--- a/RecyclerView2/app/src/main/AndroidManifest.xml
+++ b/RecyclerView2/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Carousal">
+        </activity>
+        <activity android:name=".ImageSlider">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ImageSlider"></activity>
     </application>
 
 </manifest>
