--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ajit123jain.recyclerview">
+    package="com.ajit123jain.navigationdrawer">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Carousal"></activity>
-        <activity android:name=".ImageSlider">
-
-        </activity>
-        <activity android:name=".Pagination">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
