--- a/Buyhatke2/app/src/main/AndroidManifest.xml
+++ b/Buyhatke2/app/src/main/AndroidManifest.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ajit123jain.recyclerview">
+    package="com.ajit123jain.buyhatke2">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Carousal">
-
-        </activity>
-        <activity android:name=".ImageSlider">
-
-        </activity>
-        <activity android:name=".Pagination">
-
-        </activity>
+        <activity android:name=".UserProfile"></activity>
     </application>
 
 </manifest>
